syntax = "proto3";

package auto_complite;

option go_package = "internal/api";

message AutoCompliteRequest {
  string originalString = 1;
}

message AutoCompileResponce{
  repeated string PrepositionsStrings = 1;
}

service AutoCompiteService{
  rpc AutoComplite(AutoCompliteRequest) returns (AutoCompileResponce);
}
